[tool.poetry]
name = "weblinks"
version = "0.1.0"
description = ""
authors = ["SlackSystem, TWJamesSS"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
black = "^23.7.0"
isort = "^5.12.0"
python-lsp-server = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
